Finalized footer positioning fixing. Used 100vh min height on the body and html and wrapped the yield in application.html.erb in a container that flex grows to do this

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,15 +20,5 @@
 @import "components/calendar";
 // @import "event/index";
 
-html, body {
-  height: 100%;
-  margin: 0;
-}
-
-body {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-}
-
 @import "organizations/invite";
+@import "/universal";
